# epaper-dashboard

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/bitui/: CMakeLists.txt  a.out  bitui.c  main.c
components/bitui/include/: bitui.h
components/gui/: CMakeLists.txt  gui.c
components/gui/include/: Blocktopia10pt7b.h  Blocktopia8pt7b.h  DigitalDisco16pt7b.h  Icons.h  Meteocons.h  Thixel16pt7b.h  Thixel8pt7b.h  WeatherIcons.h  WeatherIcons28.h  gui.h
components/gui/simu/: Makefile  esp_log.h  esp_netif.h  main.c
components/gui/simu/driver/: i2c_master.h
components/immjson/: CMakeLists.txt  immjson.c
components/immjson/include/: immjson.h
components/ld2410s/: CMakeLists.txt  ld2410s.c
components/ld2410s/include/: ld2410s.h
components/scd4x/: CMakeLists.txt  scd4x.c
components/scd4x/include/: scd4x.h
components/sensirion_common/: CMakeLists.txt  sensirion_common.c
components/sensirion_common/include/: sensirion_common.h
components/sht4x/: CMakeLists.txt  sht4x.c
components/sht4x/include/: sht4x.h
components/ssd1680/: CMakeLists.txt  ssd1680.c
components/ssd1680/include/: ssd1680.h
main/: CMakeLists.txt  Kconfig.projbuild  eink-dashboard.c  pins.h
main/ulp/: CMakeLists.txt  common.h  main.c  ringbuf.h
